# build_recipes

./: .gitignore  README.md
src/build_recipes/alembic/1.6.1/: package.py
src/build_recipes/doubleconversion/1.1.5/: package.py
src/build_recipes/gcc/4.8.2/: CMakeLists.txt
src/build_recipes/gcc/4.8.3/: CMakeLists.txt  build.sh
src/build_recipes/glew/2.0.0/: CMakeLists.txt
src/build_recipes/hdf5/1.8.9/: CMakeLists.txt
src/build_recipes/icu/55.1/: CMakeLists.txt  package.py
src/build_recipes/ilmbase/2.2.0/: CMakeLists.txt  package.py
src/build_recipes/openexr/2.2.0/: package.py
src/build_recipes/opensubdiv/3.0.5/: CMakeLists.txt
src/build_recipes/pip/9.0.1/: package.py
src/build_recipes/pyside/1.2.2/: build.sh  package.py
src/build_recipes/python/2.7.13/: CMakeLists.txt  package.py
src/build_recipes/qt/4.8.7/: CMakeLists.txt  package.py
src/build_recipes/setuptools/18.5/: package.py
src/build_recipes/setuptools/33.0.0/: install.sh
src/build_recipes/tbb/4.3/: package.py
src/buildrecipes/alembic/1.6.1/: CMakeLists.txt
src/buildrecipes/binutils/2.25/: CMakeLists.txt  package.py
src/buildrecipes/boost/1.55.0/: package.py
src/buildrecipes/doubleconversion/1.1.5/: CMakeLists.txt
src/buildrecipes/gcc/4.8.2/: build.sh  package.py
src/buildrecipes/gcc/4.8.3/: package.py
src/buildrecipes/glew/2.0.0/: package.py
src/buildrecipes/glfw/3.0.4/: CMakeLists.txt  package.py
src/buildrecipes/hdf5/1.8.9/: package.py
src/buildrecipes/opensubdiv/3.0.5/: package.py
src/buildrecipes/pyside/1.2.2/: CMakeLists.txt
(+5 files in other folders)
